--- a/views/admin/tweets.hbs
+++ b/views/admin/tweets.hbs
@@ -3,9 +3,8 @@
   <div class="row">
     {{!-- 側邊欄 --}}
     {{> admin-sidebar route='Tweets'}}
-    <div style="max-width: 278px;"></div>
 
-    <div class="col-6" style="width: 940px;">
+    <div class="col-6" style="width: 940px; margin: 0 0 0 327px">
       <nav class="navbar navbar-light border-start border-end">
         <div class="container-fluid">
           <h4 class="navbar-brand mb-0 h1 fs-4">推文清單</h4>
