--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -12,20 +12,21 @@
         </div>
       </nav>
       {{!-- each users 迴圈開始 --}}
+      {{#each users}}
       <div class="card" style="width: 210px; height: 314px; border-radius: 10px; position:relative;">
-        <img src="{{user.cover}}" alt=""
+        <img src="{{this.cover}}" alt=""
           style="width: 210px; height: 140px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
         <div class="content"
           style="height: 174px; display: flex; flex-direction:column; align-items:center; justify-content: space-around; padding-top:15px;">
           <div style="padding-top:15px;">
-            <h1 style="font-size: 16px; font-weight: 700;">John Doe</h1>
-            <h2 style="font-size: 14px; font-weight: 400;">@heyhohn</h2>
+            <h1 style="font-size: 16px; font-weight: 700;">{{this.name}}</h1>
+            <h2 style="font-size: 14px; font-weight: 400;">@{{this.account}}</h2>
           </div>
           <div>
             <div class="tweets-detail" style="width: 150px; display: flex; justify-content: space-around;">
               <div class="tweetsCount" style="display: flex;">
                 <img src="https://i.imgur.com/Z5nbIG9.jpg" alt="" style="width: 24px; height: 24px;">
-                <h1 style="font-size: 16px; font-weight: 500;">1.5k</h1>
+                <h1 style="font-size: 16px; font-weight: 500;">{{this.tweetsCount}}</h1>
               </div>
               <div class="likesCount" style="display: flex;">
                 <img src="https://i.imgur.com/v9bj5V3.jpg" alt="" style="width: 24px; height: 24px;">
@@ -34,16 +35,17 @@
             </div>
             <div class="followship">
               <h3 style="font-size: 14px; font-weight: 400; color: #6C757D;">
-                <span style="color: #171725;">34個</span>跟隨中
-                <span style="color: #171725;">59位</span>跟隨者
+                <span style="color: #171725;">{{this.Followings}}個</span> 跟隨中&nbsp;&nbsp;
+                <span style="color: #171725;">{{this.Followers}}位</span> 跟隨者
               </h3>
             </div>
           </div>
         </div>
         <div style="position:absolute; top:85px; left: 58px;">
-          <img src="{{user.avatar}}" alt="" style="width: 92px; height: 92px; border-radius: 50%; border: 4px solid #FFFFFF;">
+          <img src="{{this.avatar}}" alt="" style="width: 92px; height: 92px; border-radius: 50%; border: 4px solid #FFFFFF;">
         </div>
       </div>
+      {{/each}}
       {{!-- each迴圈結束 --}}
     </div>
 
