--- a/views/partials/admin-sidebar.hbs
+++ b/views/partials/admin-sidebar.hbs
@@ -20,7 +20,7 @@
     {{!-- logout --}}
     <div class="d-flex mb-4" style="margin-top: 560px;">
       <a href="/logout" style="text-decoration:none;">
-        <i class="fa-solid fa-arrow-right-from-bracket" style="color: #44444f; display:inline;"></i>
+        <img src="https://i.imgur.com/UHxOU8K.jpg" alt="" style="width: 24px; height: 24px;">
         <h5 class="fs-5 ms-3" style="color: #44444F; font-weight: 600; display:inline;">登出</h5>
       </a>
     </div>
