--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -3,17 +3,17 @@
   <div class="row">
     {{!-- 側邊欄 --}}
     {{> admin-sidebar route='Users'}}
-    <div style="max-width: 278px;"></div>
 
-    <div class="col-6" style="width: 940px;">
-      <nav class="navbar navbar-light border-start border-end">
+    <div class="col-6" style="width: 940px; margin: 0 0 0 327px">
+      <nav class="navbar navbar-light border-start border-bottom">
         <div class="container-fluid">
           <h4 class="navbar-brand mb-0 h1 fs-4">使用者列表</h4>
         </div>
       </nav>
       {{!-- each users 迴圈開始 --}}
-      {{#each users}}
-      <div class="card" style="width: 210px; height: 314px; border-radius: 10px; position:relative;">
+      <div class="cards border-start" style="width:888px; padding-left: 15px; padding-top: 15px; display: flex; justify-content: space-between; flex-wrap: wrap;">
+        {{#each users}}
+      <div class="card" style="width: 210px; height: 314px; border-radius: 10px; position:relative; margin-bottom: 15px; background-color:#F6F7F8">
         <img src="{{this.cover}}" alt=""
           style="width: 210px; height: 140px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
         <div class="content"
@@ -30,7 +30,7 @@
               </div>
               <div class="likesCount" style="display: flex;">
                 <img src="https://i.imgur.com/v9bj5V3.jpg" alt="" style="width: 24px; height: 24px;">
-                <h1 style="font-size: 16px; font-weight: 500;">20k</h1>
+                <h1 style="font-size: 16px; font-weight: 500;">{{this.likesCount}}</h1>
               </div>
             </div>
             <div class="followship">
@@ -46,6 +46,7 @@
         </div>
       </div>
       {{/each}}
+      </div>
       {{!-- each迴圈結束 --}}
     </div>
 
