--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -14,7 +14,7 @@
       <div class="cards border-start" style="width:888px; padding-left: 15px; padding-top: 15px; display: flex; justify-content: space-between; flex-wrap: wrap;">
         {{#each users}}
       <div class="card" style="width: 210px; height: 314px; border-radius: 10px; position:relative; margin-bottom: 15px; background-color:#F6F7F8">
-        <img src="{{this.cover}}" alt=""
+        <img src="{{this.cover}}"
           style="width: 210px; height: 140px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
         <div class="content"
           style="height: 174px; display: flex; flex-direction:column; align-items:center; justify-content: space-around; padding-top:15px;">
@@ -25,11 +25,11 @@
           <div>
             <div class="tweets-detail" style="width: 150px; display: flex; justify-content: space-around;">
               <div class="tweetsCount" style="display: flex;">
-                <img src="https://i.imgur.com/Z5nbIG9.jpg" alt="" style="width: 24px; height: 24px;">
+                <img src="https://i.imgur.com/Qn1HfKL.png" style="width: 24px; height: 24px;">
                 <h1 style="font-size: 16px; font-weight: 500;">{{this.tweetsCount}}</h1>
               </div>
               <div class="likesCount" style="display: flex;">
-                <img src="https://i.imgur.com/v9bj5V3.jpg" alt="" style="width: 24px; height: 24px;">
+                <img src="https://i.imgur.com/F72NmgQ.png" style="width: 24px; height: 24px;">
                 <h1 style="font-size: 16px; font-weight: 500;">{{this.likesCount}}</h1>
               </div>
             </div>
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div style="position:absolute; top:85px; left: 58px;">
-          <img src="{{this.avatar}}" alt="" style="width: 92px; height: 92px; border-radius: 50%; border: 4px solid #FFFFFF;">
+          <img src="{{this.avatar}}" style="width: 92px; height: 92px; border-radius: 50%; border: 4px solid #FFFFFF;">
         </div>
       </div>
       {{/each}}
