--- a/views/partials/messages.hbs
+++ b/views/partials/messages.hbs
@@ -1,28 +1,28 @@
 {{#if messages}}
-  <div class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; z-index:999; position: absolute;" role="alert">
+  <div id="alert" class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; z-index:999; position: absolute;" role="alert">
     <h4 class="m-3" style="font-weight:700; font-size:20px;">{{ messages }} </h4>
   </div>
 {{/if}}
 {{#if error_messages}}
-  <div class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
+  <div id="alert" class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
     <h4 class="m-3" style="font-weight:700; font-size:20px;">{{ error_messages }} </h4>
     <img src="https://i.imgur.com/PEkoTnu.png" style="height: 56px; width: 56px;" alt="">
   </div>
 {{/if}}
 {{#if success_messages}}
-  <div class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
+  <div id="alert" class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
     <h4 class="m-3" style="font-weight:700; font-size:20px;">{{ success_messages }} </h4>
     <img src="https://i.imgur.com/zmzcull.png" style="height: 56px; width: 56px;" alt="">
   </div>
 {{/if}}
 {{#if warning_messages}}
-  <div class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
+  <div id="alert" class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
     <h4 class="m-3" style="font-weight:700; font-size:20px;">{{ warning_msg }} </h4>
     <img src="https://i.imgur.com/WO72mD7.jpg" style="height: 56px; width: 56px;" alt="">
   </div>
 {{/if}}
 {{#if notice_messages}}
-  <div class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
+  <div id="alert" class="alert alert-light alert-dismissible fade show shadow p-3 mb-5 bg-body-tertiary rounded" style="height: 96px; width: 394px; display:flex; justify-content:space-between; z-index:999; position: absolute;" role="alert">
     <h4 class="m-3" style="font-weight:700; font-size:20px;">{{ warning_msg }} </h4>
     <img src="https://i.imgur.com/GFZKCvV.jpg" style="height: 56px; width: 56px;" alt="">
   </div>
