--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -11,9 +11,9 @@
         </div>
       </nav>
       {{!-- each users 迴圈開始 --}}
-      <div class="cards border-start" style="width:888px; padding-left: 15px; padding-top: 15px; display: flex; justify-content: space-between; flex-wrap: wrap;">
+      <div class="cards border-start" style="width:940px; padding-left: 15px; padding-top: 15px; display: flex; justify-content:flex-start; flex-wrap: wrap;">
         {{#each users}}
-      <div class="card" style="width: 210px; height: 314px; border-radius: 10px; position:relative; margin-bottom: 15px; background-color:#F6F7F8">
+      <div class="card" style="width: 210px; height: 314px; border-radius: 10px; position:relative; margin-bottom: 15px; margin-right: 15px; background-color:#F6F7F8">
         <img src="{{this.cover}}"
           style="width: 210px; height: 140px; border-top-left-radius: 10px; border-top-right-radius: 10px;">
         <div class="content"
